--- a/frontend/web/static/css/site.css
+++ b/frontend/web/static/css/site.css
@@ -93,8 +93,17 @@ a.desc:after {
     padding-top: 10px;
     padding-bottom: 0;
 }
-.navbar-right>li>a.avatar img{
+.avatar{
     border: #ccc solid 1px;
     width: 32px;
     height: 32px;
+}
+.box-title {
+    color: #333;
+    font-size: 18px;
+    border-bottom: 2px solid #cbcbcb;
+    padding-bottom: 5px; 
+}
+.panel-body {
+    padding:15px 0 5px;
 }
